--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -1,45 +1,45 @@
-# This workflow will build a Java project with Maven, and cache/restore any dependencies to improve the workflow execution time
-# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-java-with-maven
-
-# This workflow uses actions that are not certified by GitHub.
-# They are provided by a third-party and are governed by
-# separate terms of service, privacy policy, and support
-# documentation.
-
+---
 name: Java CI with Maven
-
 on:
   push:
-    branches: [ "main" ]
+    branches:
+      - main
   pull_request:
-    branches: [ "main" ]
-
+    branches:
+      - main
 jobs:
   build:
-
     runs-on: ubuntu-latest
-
     steps:
-    
-    - uses: actions/checkout@v3
-    
-    - name: Set up JDK 17
-      uses: actions/setup-java@v3
-      with:
-        java-version: '17'
-        distribution: 'temurin'
-        cache: maven
-        
-    - name: Build with Maven
-      run: mvn -B package --file pom.xml
-
-    - name: Update dependency graph
-      uses: advanced-security/maven-dependency-submission-action@571e99aab1055c2e71a1e2309b9691de18d6b7d6
-      
-    - name: Archive artifacts
-      uses: actions/upload-artifact@v2
-      with:
-        name: GeyserUpdater
-        path: |
-          target/*.jar
-          !target/original-*.jar
+      - uses: actions/checkout@v3
+      - name: Set up JDK 17
+        uses: actions/setup-java@v3
+        with:
+          java-version: "17"
+          distribution: temurin
+          cache: maven
+      - name: Build with Maven
+        run: mvn -B package --file pom.xml
+      - name: Update dependency graph
+        uses: advanced-security/maven-dependency-submission-action@571e99aab1055c2e71a1e2309b9691de18d6b7d6
+      - name: Archive artifacts
+        uses: actions/upload-artifact@v2
+        with:
+          name: GeyserUpdater
+          path: |
+            target/*.jar
+            !target/original-*.jar
+    build-docker-image:
+      name: Publish to Docker Hub
+      runs-on: ubuntu-latest
+      needs:
+        - build_and_test
+      steps:
+        - uses: actions/checkout@v2
+        - name: Login to Docker Hub
+          run: docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{
+            secrets.DOCKER_PASSWORD }}
+        - name: Build Container image
+          run: docker build -t ${{ secrets.DOCKER_REPO }}:latest .
+        - name: Publish Docker image
+          run: docker push ${{ secrets.DOCKER_REPO }}
