--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -33,7 +33,7 @@ jobs:
       name: Publish to Docker Hub
       runs-on: ubuntu-latest
       needs:
-        - build_and_test
+        - build
       steps:
         - uses: actions/checkout@v2
         - name: Login to Docker Hub
