--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -19,7 +19,8 @@ jobs:
           distribution: temurin
           cache: maven
       - name: Build with Maven
-        run: mvn -B package --file pom.xml
+        run: javac com/baeldung/jarArguments/*.java
+          jar cfm JarExample.jar ../resources/example_manifest.txt com/baeldung/jarArguments/*.class
       - name: Update dependency graph
         uses: advanced-security/maven-dependency-submission-action@571e99aab1055c2e71a1e2309b9691de18d6b7d6
       - name: Archive artifacts
@@ -30,16 +31,16 @@ jobs:
             target/*.jar
             !target/original-*.jar
   build-docker-image:
-      name: Publish to Docker Hub
-      runs-on: ubuntu-latest
-      needs:
-        - build
-      steps:
-        - uses: actions/checkout@v2
-        - name: Login to Docker Hub
-          run: docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{
-            secrets.DOCKER_PASSWORD }}
-        - name: Build Container image
-          run: docker build -t ${{ secrets.DOCKER_REPO }}:latest .
-        - name: Publish Docker image
-          run: docker push ${{ secrets.DOCKER_REPO }}
+    name: Publish to Docker Hub
+    runs-on: ubuntu-latest
+    needs:
+      - build
+    steps:
+      - uses: actions/checkout@v2
+      - name: Login to Docker Hub
+        run: docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{
+          secrets.DOCKER_PASSWORD }}
+      - name: Build Container image
+        run: docker build -t ${{ secrets.DOCKER_REPO }}:latest .
+      - name: Publish Docker image
+        run: docker push ${{ secrets.DOCKER_REPO }}
