--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -19,8 +19,8 @@ jobs:
           distribution: temurin
           cache: maven
       - name: Build with Maven
-        run: javac org/example/PostOffice2/*.java
-          jar cfm app.jar ../resources/META-INF/MANIFEST.MF org/example/PostOffice2/*.class
+        run: javac org/example/PostOffice/*.java
+          jar cfm app.jar ../resources/META-INF/MANIFEST.MF org/example/PostOffice/*.class
       - name: Update dependency graph
         uses: advanced-security/maven-dependency-submission-action@571e99aab1055c2e71a1e2309b9691de18d6b7d6
       - name: Archive artifacts
